dnl $Id$
dnl
dnl configure script to find the main deal library
dnl in .. or ../deal.II or ../deal
dnl

define([AC_CACHE_LOAD], )dnl
define([AC_CACHE_SAVE], )dnl
AC_INIT(base)

dnl Supply deal-directory in command line or find it
AC_ARG_WITH(deal,
[  --with-deal=DIR DIR is the root of the deal.II library],
    DEAL2_DIR=$withval,
    if test -r ../common/Make.global_options ; then
      DEAL2_DIR=`pwd`/.. ;
    fi
    if test -r ../deal.II/common/Make.global_options ; then
      DEAL2_DIR=`pwd`/../deal.II ;
    fi
    if test -r ../deal/common/Make.global_options ; then
      DEAL2_DIR=`pwd`/../deal ;
    fi)
AC_SUBST(DEAL2_DIR)


dnl Check whether we can use "test -L" and if not substitute it with
dnl "bash test -L". Unfortunately, the systems where either works seem
dnl mutually exclusive
rm -f acconfig.link
AC_MSG_CHECKING(for test -L)
ln -s Makefile acconfig.link
if test -L acconfig.link ; then
  TEST_MINUS_L="test -L" ;
else
  TEST_MINUS_L="bash test -L" ;
fi
rm acconfig.link
AC_MSG_RESULT($TEST_MINUS_L)
AC_SUBST(TEST_MINUS_L)

AC_OUTPUT(Makefile.paths)
